methods before all

--- a/master_thesis/aaai/EIISRS/aaai24.bib
+++ b/master_thesis/aaai/EIISRS/aaai24.bib
@@ -630,3 +630,53 @@ keywords = {Graph representation learning (GRL), Graph neural network (GNN), Mul
     year={2021},
     url={https://openreview.net/forum?id=0Kb33DHJ1g}
 }
+
+@inproceedings{graphsage,
+ author = {Hamilton, Will and Ying, Zhitao and Leskovec, Jure},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Inductive Representation Learning on Large Graphs},
+ volume = {30},
+ year = {2017}
+}
+
+@inproceedings{selfCL,
+    author = {Khosla, Prannay and Teterwak, Piotr and Wang, Chen and Sarna, Aaron and Tian, Yonglong and Isola, Phillip and Maschinot, Aaron and Liu, Ce and Krishnan, Dilip},
+    title = {Supervised Contrastive Learning},
+    year = {2020},
+    isbn = {9781713829546},
+    publisher = {Curran Associates Inc.},
+    address = {Red Hook, NY, USA},
+    booktitle = {Proceedings of the 34th International Conference on Neural Information Processing Systems},
+    articleno = {1567},
+    numpages = {13},
+    location = {Vancouver, BC, Canada},
+    series = {NIPS'20}
+}
+
+@inproceedings{deepInfoMax,
+  author = {R. Devon Hjelm and
+          Alex Fedorov and
+          Samuel Lavoie{-}Marchildon and
+          Karan Grewal and
+          Philip Bachman and
+          Adam Trischler and
+          Yoshua Bengio},
+  title = {Learning deep representations by mutual information estimation and maximization},
+  booktitle = {7th International Conference on Learning Representations, {ICLR} 2019, New Orleans, LA, USA, May 6-9, 2019},
+  publisher = {OpenReview.net},
+  year = {2019},
+  url = {https://openreview.net/forum?id=Bklr3j0cKX},
+  timestamp = {Thu, 25 Jul 2019 13:03:16 +0200},
+}
+
+@InProceedings{S4L,
+    author = {Zhai, Xiaohua and Oliver, Avital and Kolesnikov, Alexander and Beyer, Lucas},
+    title = {S4L: Self-Supervised Semi-Supervised Learning},
+    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+    month = {October},
+    year = {2019}
+}
+
