All revised by Louisa

--- a/master_thesis/aaai/EIISRS/aaai24.bib
+++ b/master_thesis/aaai/EIISRS/aaai24.bib
@@ -480,25 +480,8 @@ keywords = {Graph representation learning (GRL), Graph neural network (GNN), Mul
     series = {KDD '18}
 }
 
-@inproceedings{MGNM,
-    author = {Tian, Yu and Chang, Jianxin and Niu, Yanan and Song, Yang and Li, Chenliang},
-    title = {When Multi-Level Meets Multi-Interest: A Multi-Grained Neural Model for Sequential Recommendation},
-    year = {2022},
-    isbn = {9781450387323},
-    publisher = {Association for Computing Machinery},
-    address = {New York, NY, USA},
-    url = {https://doi.org/10.1145/3477495.3532081},
-    doi = {10.1145/3477495.3532081},
-    booktitle = {Proceedings of the 45th International ACM SIGIR Conference on Research and Development in Information Retrieval},
-    pages = {1632–1641},
-    numpages = {10},
-    keywords = {graph neural network, sequential recommendation, multi-interest learning},
-    location = {Madrid, Spain},
-    series = {SIGIR '22}
-}
-
 @inproceedings{
-    GNN,
+    GCN,
     title={Semi-Supervised Classification with Graph Convolutional Networks},
     author={Thomas N. Kipf and Max Welling},
     booktitle={International Conference on Learning Representations},
@@ -680,3 +663,29 @@ keywords = {Graph representation learning (GRL), Graph neural network (GNN), Mul
     year = {2019}
 }
 
+@inproceedings{ncl,
+    author={Zihan Lin and
+            Changxin Tian and
+            Yupeng Hou and
+            Wayne Xin Zhao},
+    title={Improving Graph Collaborative Filtering with Neighborhood-enriched Contrastive Learning},
+    booktitle={{WWW}},
+    year={2022},
+}
+
+@inproceedings{SEPT,
+    author = {Yu, Junliang and Yin, Hongzhi and Gao, Min and Xia, Xin and Zhang, Xiangliang and Viet Hung, Nguyen Quoc},
+    title = {Socially-Aware Self-Supervised Tri-Training for Recommendation},
+    year = {2021},
+    isbn = {9781450383325},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3447548.3467340},
+    doi = {10.1145/3447548.3467340},
+    booktitle = {Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining},
+    pages = {2084–2092},
+    numpages = {9},
+    keywords = {tri-training, self-supervised learning, recommender systems, contrastive learning},
+    location = {Virtual Event, Singapore},
+    series = {KDD '21}
+}
