EIISRS final ver.

--- a/master_thesis/aaai/EIISRS/anonymous-submission-latex-2024.tex
+++ b/master_thesis/aaai/EIISRS/anonymous-submission-latex-2024.tex
@@ -255,6 +255,7 @@ where $\textbf{\textit{P}}^{(l)}_{r}$ and $\textbf{\textit{P}}^{(l)}_{s}$ are th
 \subsection{Social Influence Learning}
 After the elementary graph convolutions, the social influence learning phase follows to capture comprehensive social patterns for improved recommendations.
 \subsubsection{Social Influence Diversity.}
+%Forword Propagation Designing
 Social influence is diverse as users are interconnected over various relationships. Moreover, social networks are sparse. Only part of the links are observable while the rest remain unknown. Therefore, one way to optimize social network modeling is to apply link predictions and abnormal detections. However, it will be expensive to train such a model, and the model will need to comply with a pre-training/fine-tuning framework. We wish to use a lightweight and end-to-end scheme for capturing the social influence diversity. 
 
 To this end, we use VAE \cite{VAE} as a building block and propose Layerwise Graph-Enhanced Variational AutoEncoder (LGE-VAE). Specifically, the input features of LGE-VAE are $\{\textbf{\textit{P}}^{(0)}_{s}, \textbf{\textit{P}}^{(1)}_{s}, \ldots, \textbf{\textit{P}}^{(L)}_{s}\}$, the layerwise neighborhood representations learned from previous social graph convolutions. LGE-VAE encodes these features as layerwise distributions over the latent space. Then, LGE-VAE samples a set of representations $\{\textbf{\textit{Z}}_s^{(0)}, \textbf{\textit{Z}}_s^{(1)}, \ldots, \textbf{\textit{Z}}_s^{(L)}\}$ for each user from the layerwise distributions. The uncertainty within the sampling process helps to capture the diversity in social influence. Finally, a decoder is used to reconstruct the input features. 
